package com.morris.pattern.factory.demo.v2;

public interface PictureReader {
    void read();
}
